--- a/Develop/style.css
+++ b/Develop/style.css
@@ -70,7 +70,7 @@ textarea {
   transition: all 0.3s ease-in-out;
 }
 
-/*** OVERRIDE - MEDIA QUERY FOR TABLETS AND SMALLER  ***/
+/*** OVERWRITE - MEDIA QUERY FOR TABLETS AND SMALLER  ***/
 /* This will be applied on any screen 768px and bellow */
 @media screen and (max-width: 768px), screen and (max-width: 575px) {
   .row {
