--- a/Develop/assets/style.css
+++ b/Develop/assets/style.css
@@ -43,7 +43,7 @@ textarea{
 }
 
 .hour {
-  background-color: #white;
+  background-color: #ffffff;
   color: #275244;
   border-top: 1px dashed #275244;
   border-top-left-radius: 9px;
@@ -51,21 +51,21 @@ textarea{
 }
 
 .past {
-  background-color: #8f8f8f;
-  color: #1a1e1d;
+  background-color: #8a8383;
+  color: #040907;
   font-style: italic;
   text-transform: capitalize;
 }
 
 .present {
-  background-color: #bb2f17;
-  color: rgb(23, 19, 19);
+  background-color: #ea3414;
+  color: rgb(20, 11, 11);
   text-transform: uppercase;
 }
 
 .future {
-  background-color: #14d14d;
-  color: rgb(10, 6, 6);
+  background-color: #1bd01b;
+  color: rgb(7, 4, 4);
   text-transform: capitalize;
 }
 
@@ -73,7 +73,7 @@ textarea{
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #5a84c4;
+  background-color: #54a4ea;
   color: #FFFAF0;
 }
 
